draco_trunk/llvm_c_api/core_h.ads


  --===-- Instruction builders ----------------------------------------------===
  -- An instruction builder represents a point within a basic block, and is the
  -- * exclusive means of building instructions using the C interface.
  --

   function LLVMCreateBuilderInContext (arg1 : LLVMContextRef) return LLVMBuilderRef;  -- Core.h:782
   pragma Import (C, LLVMCreateBuilderInContext, "LLVMCreateBuilderInContext");

   function LLVMCreateBuilder return LLVMBuilderRef;  -- Core.h:783
   pragma Import (C, LLVMCreateBuilder, "LLVMCreateBuilder");

   procedure LLVMPositionBuilder
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMBasicBlockRef;
      arg3 : LLVMValueRef);  -- Core.h:784
   pragma Import (C, LLVMPositionBuilder, "LLVMPositionBuilder");

   procedure LLVMPositionBuilderBefore (arg1 : LLVMBuilderRef; arg2 : LLVMValueRef);  -- Core.h:786
   pragma Import (C, LLVMPositionBuilderBefore, "LLVMPositionBuilderBefore");

   procedure LLVMPositionBuilderAtEnd (arg1 : LLVMBuilderRef; arg2 : LLVMBasicBlockRef);  -- Core.h:787
   pragma Import (C, LLVMPositionBuilderAtEnd, "LLVMPositionBuilderAtEnd");

   function LLVMGetInsertBlock (arg1 : LLVMBuilderRef) return LLVMBasicBlockRef;  -- Core.h:788
   pragma Import (C, LLVMGetInsertBlock, "LLVMGetInsertBlock");

   procedure LLVMClearInsertionPosition (arg1 : LLVMBuilderRef);  -- Core.h:789
   pragma Import (C, LLVMClearInsertionPosition, "LLVMClearInsertionPosition");

   procedure LLVMInsertIntoBuilder (arg1 : LLVMBuilderRef; arg2 : LLVMValueRef);  -- Core.h:790
   pragma Import (C, LLVMInsertIntoBuilder, "LLVMInsertIntoBuilder");

   procedure LLVMInsertIntoBuilderWithName
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : Interfaces.C.Strings.chars_ptr);  -- Core.h:791
   pragma Import (C, LLVMInsertIntoBuilderWithName, "LLVMInsertIntoBuilderWithName");

   procedure LLVMDisposeBuilder (arg1 : LLVMBuilderRef);  -- Core.h:793
   pragma Import (C, LLVMDisposeBuilder, "LLVMDisposeBuilder");

  -- Metadata
   procedure LLVMSetCurrentDebugLocation (arg1 : LLVMBuilderRef; arg2 : LLVMValueRef);  -- Core.h:796
   pragma Import (C, LLVMSetCurrentDebugLocation, "LLVMSetCurrentDebugLocation");

   function LLVMGetCurrentDebugLocation (arg1 : LLVMBuilderRef) return LLVMValueRef;  -- Core.h:797
   pragma Import (C, LLVMGetCurrentDebugLocation, "LLVMGetCurrentDebugLocation");

   procedure LLVMSetInstDebugLocation (arg1 : LLVMBuilderRef; arg2 : LLVMValueRef);  -- Core.h:798
   pragma Import (C, LLVMSetInstDebugLocation, "LLVMSetInstDebugLocation");

  -- Terminators
   function LLVMBuildRetVoid (arg1 : LLVMBuilderRef) return LLVMValueRef;  -- Core.h:801
   pragma Import (C, LLVMBuildRetVoid, "LLVMBuildRetVoid");

   function LLVMBuildRet (arg1 : LLVMBuilderRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:802
   pragma Import (C, LLVMBuildRet, "LLVMBuildRet");

   function LLVMBuildAggregateRet
     (arg1 : LLVMBuilderRef;
      arg2 : System.Address;
      arg3 : unsigned) return LLVMValueRef;  -- Core.h:803
   pragma Import (C, LLVMBuildAggregateRet, "LLVMBuildAggregateRet");

   function LLVMBuildBr (arg1 : LLVMBuilderRef; arg2 : LLVMBasicBlockRef) return LLVMValueRef;  -- Core.h:805
   pragma Import (C, LLVMBuildBr, "LLVMBuildBr");

   function LLVMBuildCondBr
     (B     : LLVMBuilderRef;
      Bif   : LLVMValueRef;
      Bthen : LLVMBasicBlockRef;
      Belse : LLVMBasicBlockRef) return LLVMValueRef;  -- Core.h:806
   pragma Import (C, LLVMBuildCondBr, "LLVMBuildCondBr");

   function LLVMBuildSwitch
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMBasicBlockRef;
      arg4 : unsigned) return LLVMValueRef;  -- Core.h:808
   pragma Import (C, LLVMBuildSwitch, "LLVMBuildSwitch");

   function LLVMBuildIndirectBr
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : unsigned) return LLVMValueRef;  -- Core.h:810
   pragma Import (C, LLVMBuildIndirectBr, "LLVMBuildIndirectBr");

   function LLVMBuildInvoke
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : System.Address;
      arg4 : unsigned;
      arg5 : LLVMBasicBlockRef;
      arg6 : LLVMBasicBlockRef;
      arg7 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:812
   pragma Import (C, LLVMBuildInvoke, "LLVMBuildInvoke");

   function LLVMBuildUnwind (arg1 : LLVMBuilderRef) return LLVMValueRef;  -- Core.h:816
   pragma Import (C, LLVMBuildUnwind, "LLVMBuildUnwind");

   function LLVMBuildUnreachable (arg1 : LLVMBuilderRef) return LLVMValueRef;  -- Core.h:817
   pragma Import (C, LLVMBuildUnreachable, "LLVMBuildUnreachable");

  -- Add a case to the switch instruction
   procedure LLVMAddCase
     (arg1 : LLVMValueRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMBasicBlockRef);  -- Core.h:820
   pragma Import (C, LLVMAddCase, "LLVMAddCase");

  -- Add a destination to the indirectbr instruction
   procedure LLVMAddDestination (arg1 : LLVMValueRef; arg2 : LLVMBasicBlockRef);  -- Core.h:824
   pragma Import (C, LLVMAddDestination, "LLVMAddDestination");

  -- Arithmetic
   function LLVMBuildAdd
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:827
   pragma Import (C, LLVMBuildAdd, "LLVMBuildAdd");

   function LLVMBuildNSWAdd
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:829
   pragma Import (C, LLVMBuildNSWAdd, "LLVMBuildNSWAdd");

   function LLVMBuildNUWAdd
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:831
   pragma Import (C, LLVMBuildNUWAdd, "LLVMBuildNUWAdd");

   function LLVMBuildFAdd
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:833
   pragma Import (C, LLVMBuildFAdd, "LLVMBuildFAdd");

   function LLVMBuildSub
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:835
   pragma Import (C, LLVMBuildSub, "LLVMBuildSub");

   function LLVMBuildNSWSub
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:837
   pragma Import (C, LLVMBuildNSWSub, "LLVMBuildNSWSub");

   function LLVMBuildNUWSub
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:839
   pragma Import (C, LLVMBuildNUWSub, "LLVMBuildNUWSub");

   function LLVMBuildFSub
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:841
   pragma Import (C, LLVMBuildFSub, "LLVMBuildFSub");

   function LLVMBuildMul
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:843
   pragma Import (C, LLVMBuildMul, "LLVMBuildMul");

   function LLVMBuildNSWMul
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:845
   pragma Import (C, LLVMBuildNSWMul, "LLVMBuildNSWMul");

   function LLVMBuildNUWMul
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:847
   pragma Import (C, LLVMBuildNUWMul, "LLVMBuildNUWMul");

   function LLVMBuildFMul
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:849
   pragma Import (C, LLVMBuildFMul, "LLVMBuildFMul");

   function LLVMBuildUDiv
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:851
   pragma Import (C, LLVMBuildUDiv, "LLVMBuildUDiv");

   function LLVMBuildSDiv
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:853
   pragma Import (C, LLVMBuildSDiv, "LLVMBuildSDiv");

   function LLVMBuildExactSDiv
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:855
   pragma Import (C, LLVMBuildExactSDiv, "LLVMBuildExactSDiv");

   function LLVMBuildFDiv
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:857
   pragma Import (C, LLVMBuildFDiv, "LLVMBuildFDiv");

   function LLVMBuildURem
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:859
   pragma Import (C, LLVMBuildURem, "LLVMBuildURem");

   function LLVMBuildSRem
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:861
   pragma Import (C, LLVMBuildSRem, "LLVMBuildSRem");

   function LLVMBuildFRem
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:863
   pragma Import (C, LLVMBuildFRem, "LLVMBuildFRem");

   function LLVMBuildShl
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:865
   pragma Import (C, LLVMBuildShl, "LLVMBuildShl");

   function LLVMBuildLShr
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:867
   pragma Import (C, LLVMBuildLShr, "LLVMBuildLShr");

   function LLVMBuildAShr
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:869
   pragma Import (C, LLVMBuildAShr, "LLVMBuildAShr");

   function LLVMBuildAnd
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:871
   pragma Import (C, LLVMBuildAnd, "LLVMBuildAnd");

   function LLVMBuildOr
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:873
   pragma Import (C, LLVMBuildOr, "LLVMBuildOr");

   function LLVMBuildXor
     (B    : LLVMBuilderRef;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:875
   pragma Import (C, LLVMBuildXor, "LLVMBuildXor");

   function LLVMBuildBinOp
     (B    : LLVMBuilderRef;
      Op   : LLVMOpcode;
      LHS  : LLVMValueRef;
      RHS  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:877
   pragma Import (C, LLVMBuildBinOp, "LLVMBuildBinOp");

   function LLVMBuildNeg
     (B    : LLVMBuilderRef;
      Val  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:880
   pragma Import (C, LLVMBuildNeg, "LLVMBuildNeg");

   function LLVMBuildNSWNeg
     (B    : LLVMBuilderRef;
      Val  : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:881
   pragma Import (C, LLVMBuildNSWNeg, "LLVMBuildNSWNeg");
